kubernetes/apps/observability/gatus/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.vaderrp.com"
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Observability
      url: "http://gatus.observability.svc.cluster.local/health"
spec:
  parentRefs:
    - name: gateway-public
      namespace: network
  hostnames: ["gatus.vaderrp.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-warp
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc-auth
      backendRefs:
        - name: gatus
          port: 80
